Don't blame it ON GitHub

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -46,7 +46,7 @@
 
       <footer>
         <p></p>
-        <p class="view"><a href="https://github.com/ardnejar/GPath.svg">View, Fork, Blame this project on <strong>GitHub</strong></a></p>
+        <p class="view"><a href="https://github.com/ardnejar/GPath.svg">View, Fork, Blame this project at <strong>GitHub</strong></a></p>
       </footer>
     </div>
 
